Fix text overflows on mobile devices

--- a/public/styles/hljs/overrides.scss
+++ b/public/styles/hljs/overrides.scss
@@ -1,5 +1,4 @@
 pre {
-  overflow: visible !important;
   position: relative !important;
   .btn-clipboard {
     outline: 0 !important;
